<resources>
    <string name="app_name">Trello Clone Master</string>


    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Lets Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Trello Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="sign_in_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>

    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>
    <string name="project_description">Project Description</string>
    <string name="NoUnits">No Units Available</string>

    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>
    <string name="members">Members</string>

    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="search_member">Search Member</string>

    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>

    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="delete_card">Delete Card</string>

    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="str_select_label_color">Select Label Color</string>

    <string name="str_select_member">Select Member</string>
    <string name="public_project">Public Project</string>

    <string name="default_notification_channel_id">projemanag_notification_channel_id</string>

    <!-- Project Discovery Feature -->
    <string name="find_projects">Find Projects</string>
    <string name="discover_projects">Discover Projects</string>
    <string name="search_projects_hint">Search projects by name...</string>
    <string name="request_to_join">Request to Join</string>
    <string name="request_sent">Request Sent</string>
    <string name="already_member">Already Member</string>
    <string name="no_public_projects_available">No public projects available</string>
    <string name="search_no_results">No projects found matching your search</string>
    <string name="request_sent_successfully">Join request sent successfully!</string>
    <string name="request_failed">Failed to send join request. Please try again.</string>
    <string name="nav_find_projects">Find Projects</string>

    <!-- Notification strings -->
    <string name="notification_icon">Notification Icon</string>
    <string name="notifications">Notifications</string>
    <string name="nav_notifications">Notifications</string>
    <string name="no_notifications">No notifications yet</string>
    <string name="mark_all_read">Mark All Read</string>
    <string name="clear_all">Clear All</string>

    <!-- Calendar Activity Strings -->
    <string name="tasks_for_selected_date">Tasks for Selected Date</string>
    <string name="no_tasks_on_selected_date">No tasks on this date</string>
    <string name="nav_calendar">Calendar</string>

    <!-- Calendar Task Strings -->
    <string name="assigned_to_count">%d assigned</string>
</resources>